Fix broken vertical alignment of search and filter search container & chips when the accessible search button is focused

--- a/scss/_patterns_search-and-filter.scss
+++ b/scss/_patterns_search-and-filter.scss
@@ -120,6 +120,12 @@
       flex: 1;
       margin: 0;
       position: relative;
+
+      // Restrict the height of the search box to the height of the search container
+      &,
+      & > * {
+        height: 100%;
+      }
     }
 
     .p-search-and-filter__input {
